WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86986
[EFL] Minor style fixes in web intents code are needed
https://bugs.webkit.org/show_bug.cgi?id=86986
Summary
[EFL] Minor style fixes in web intents code are needed
Chris Dumez
Reported
2012-05-20 22:19:38 PDT
The patch for
Bug 86354
contained a few styling issues that need to be fixed.
Attachments
Patch
(4.46 KB, patch)
2012-05-20 22:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-20 22:23:20 PDT
Created
attachment 142946
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-21 00:10:13 PDT
Comment on
attachment 142946
[details]
Patch Clearing flags on attachment: 142946 Committed
r117737
: <
http://trac.webkit.org/changeset/117737
>
WebKit Review Bot
Comment 3
2012-05-21 00:10:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug