[EFL] Minor style fixes in web intents code are needed https://bugs.webkit.org/show_bug.cgi?id=86986

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-21
Reviewed by Adam Barth.

Source/WebKit:

Fix minor ordering issues in CMake files.

* CMakeLists.txt:
* PlatformEfl.cmake:

Source/WebKit/efl:

* ewk/EWebKit.h: Add new intent headers.
* ewk/ewk_frame.h: Add missing underscores to EwkIntentRequest type.

Canonical link: https://commits.webkit.org/104636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117737 268f45cc-cd09-0410-ab3c-d52691b4dbfc