Source/WebKit/efl/ewk/EWebKit.h
@@ -34,6 +34,8 @@
 #include "ewk_cookies.h"
 #include "ewk_frame.h"
 #include "ewk_history.h"
+#include "ewk_intent.h"
+#include "ewk_intent_request.h"
 #include "ewk_js.h"
 #include "ewk_main.h"
 #include "ewk_network.h"
